--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,6 +7,7 @@
   <title>Booksey</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="/path/to/your/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -18,69 +19,64 @@
       <div class="hero-slider swiper">
         <ul class="hero-banners swiper-wrapper">
           <li class="hero-banner-item swiper-slide">
-            <picture>
-              <source srcset="/img/hero-img/hero-banner-1-x1.png 1x, /img/hero-img/hero-banner-1-x2.png 2x"
-                type="image/png">
-              <img src="/img/hero-img/hero-banner-1-x1.png" alt="Книга та чашка кави" class="hero-banner-image">
-            </picture>
-            <div class="banner-content">
-              <p class="banner-text">Get 10% off your first order!</p>
-              <a href="#" class="button banner-button" aria-label="Shop Now!">Shop Now!</a>
-            </div>
+            <a href="#books" class="hero-banner-link" aria-label="Shop Now!">
+              <picture>
+                <source srcset="/img/hero-img/hero-banner-1-x1.png 1x, /img/hero-img/hero-banner-1-x2.png 2x"
+                  type="image/png">
+                <img src="/img/hero-img/hero-banner-1-x1.png" alt="Акційний банер: Знижка 10% на перше замовлення"
+                  class="hero-banner-image">
+              </picture>
+            </a>
           </li>
           <li class="hero-banner-item swiper-slide">
-            <picture>
-              <source srcset="/img/hero-img/hero-banner-2-x1.png 1x, /img/hero-img/hero-banner-2-x2.png 2x"
-                type="image/png">
-              <img src="/img/hero-img/hero-banner-2-x1.png" alt="Окуляри та розкрита книга" class="hero-banner-image">
-            </picture>
-            <div class="banner-content">
-              <p class="banner-text">Save 15% on some books!</p>
-              <a href="#" class="button banner-button" aria-label="Shop Now!">Shop Now!</a>
-            </div>
+            <a href="#books" class="hero-banner-link" aria-label="Shop Now!">
+              <picture>
+                <source srcset="/img/hero-img/hero-banner-2-x1.png 1x, /img/hero-img/hero-banner-2-x2.png 2x"
+                  type="image/png">
+                <img src="/img/hero-img/hero-banner-2-x1.png" alt="Акційний банер: Знижка 15% на деякі книги"
+                  class="hero-banner-image">
+              </picture>
+            </a>
           </li>
           <li class="hero-banner-item swiper-slide">
-            <picture>
-              <source srcset="/img/hero-img/hero-banner-3-x1.png 1x, /img/hero-img/hero-banner-3-x2.png 2x"
-                type="image/png">
-              <img src="/img/hero-img/hero-banner-3-x1.png" alt="Книжкова полиця" class="hero-banner-image">
-            </picture>
-            <div class="banner-content">
-              <p class="banner-text">Up to 40% off summer reads!</p>
-              <a href="#" class="button banner-button" aria-label="Shop Now!">Shop Now!</a>
-            </div>
+            <a href="#books" class="hero-banner-link" aria-label="Shop Now!">
+              <picture>
+                <source srcset="/img/hero-img/hero-banner-3-x1.png 1x, /img/hero-img/hero-banner-3-x2.png 2x"
+                  type="image/png">
+                <img src="/img/hero-img/hero-banner-3-x1.png" alt="Акційний банер: До 40% на літні читання"
+                  class="hero-banner-image">
+              </picture>
+            </a>
           </li>
           <li class="hero-banner-item swiper-slide">
-            <picture>
-              <source srcset="/img/hero-img/hero-banner-4-x1.png 1x, /img/hero/hero-banner-4-x2.png 2x"
-                type="image/png">
-              <img src="/img/hero-img/hero-banner-4-x1.png" alt="Людина читає книгу на траві" class="hero-banner-image">
-            </picture>
-            <div class="banner-content">
-              <p class="banner-text">Last chance to buy your spring bestsellers!</p>
-              <a href="#" class="button banner-button" aria-label="Shop Now!">Shop Now!</a>
-            </div>
+            <a href="#books" class="hero-banner-link" aria-label="Shop Now!">
+              <picture>
+                <source srcset="/img/hero-img/hero-banner-4-x1.png 1x, /img/hero-img/hero-banner-4-x2.png 2x"
+                  type="image/png">
+                <img src="/img/hero-img/hero-banner-4-x1.png"
+                  alt="Акційний банер: Останній шанс купити весняні бестселери" class="hero-banner-image">
+              </picture>
+            </a>
           </li>
         </ul>
-      </div>
-
-      <div class="slider-controls">
-        <button type="button" class="slider-button prev-button swiper-button-prev" aria-label="Попередній банер">
+        <div class="swiper-button-prev">
           <svg width="24" height="24" viewBox="0 0 24 24">
             <path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z" />
           </svg>
-        </button>
-
-        <div class="slider-banner-text"></div>
-
-        <button type="button" class="slider-button next-button swiper-button-next" aria-label="Наступний банер">
+        </div>
+        <div class="swiper-button-next">
           <svg width="24" height="24" viewBox="0 0 24 24">
             <path d="M8.59 16.59L10 18l6-6-6-6-1.41 1.41L13.17 12z" />
           </svg>
-        </button>
+        </div>
       </div>
-
     </div>
+  </section>
+
+  <section id="books" class="books">
+    <h2 class="visually-hidden">Trending books</h2>
+    <p class="books-subtitle">Books</p>
+    <p class="books-count">Showing 32 of 100</p>
   </section>
 
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
