--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -80,9 +80,14 @@
   border: 1px solid #0b0500;
   border-radius: 4px;
   padding: 12px 23px;
-  height: 48px;
+
   background: transparent;
   transition: all 0.3s ease;
+
+  font-weight: 400;
+  font-size: 16px;
+
+  line-height: 1.5;
   color: #0b0500;
 }
 
